added some bannar content and picture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!--header part start-->
-  <header>
+  <header class="header">
     <nav>
       <h3 class="logo">Ma<span class="logo-color">r</span>y</h3>
       <ul>
@@ -20,6 +20,16 @@
         <li><button class="btn-primary">Hire Me</button></li>
       </ul>
     </nav>
+    <div class="bannar">
+      <div class="bannar-con">
+        <h3 class="bannar-greating">Hi, I  am</h3>
+        <h1 class="bannar-title">Mary Hardy</h1>
+        <p class="bannar-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary">Contact</button>
+      </div>
+      <img class="bannar-picture" src="images/hardy.png" alt="hardy">
+    </div>
   </header>
   <!--header part end-->
   <main></main>
