--- a/index.html
+++ b/index.html
@@ -57,6 +57,32 @@
       </div>
     </section>
     <!--about part end-->
+    <section class="whit-i-do-section">
+      <h3 class="title-section">What I do</h3>
+      <p class="whit-i-do-desc">I have more than 10 years experience building software for clients all over the world. <br> Below is a quick overview of my main technical skill sets and technologies i use. <br> Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+      <div class="what-i-do-icon">
+        <div class="skill">
+          <img src="./images/icons/js.png" alt="js">
+          <h3 class="skill-title">Vanilla JavaScript</h3>
+          <p class="title-descreption">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+          <img src="./images/icons/react.png" alt="React">
+          <h3 class="skill-title">React</h3>
+          <p class="title-descreption">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+          <img src="./images/icons/nodejs.png" alt="Node js">
+          <h3 class="skill-title">Node.js</h3>
+          <p class="title-descreption">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+          <img src="./images/icons/mongo.png" alt="MongoDB">
+          <h3 class="skill-title">MongoDB</h3>
+          <p class="title-descreption">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
