--- a/index.html
+++ b/index.html
@@ -83,6 +83,62 @@
         </div>
       </div>
     </section>
+    <!--resume part start-->
+    <section>
+      <div class="resume-section">
+        <h3 class="title-section ">A summary of My Resume</h3>
+        <div class="resume-content">
+          <div class="resume-colam">
+            <h3 class="resume-title">My Education</h3>
+            <div class="resume-colom-part">
+              <h3 class="resume-con-title">Master in Computer Engineering</h3>
+              <h5 class="resume-sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="resume-con-disc">List skill/technologies here. You can change the icon above 
+  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="resume-colom-part">
+              <h3 class="resume-con-title">Master in Computer Engineering</h3>
+              <h5 class="resume-sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="resume-con-disc">List skill/technologies here. You can change the icon above 
+  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="resume-colom-part">
+              <h3 class="resume-con-title">Master in Computer Engineering</h3>
+              <h5 class="resume-sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="resume-con-disc">List skill/technologies here. You can change the icon above 
+  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+          </div>
+          <div class="resume-colam">
+            <h3 class="resume-title">My Experience</h3>
+            <div class="resume-colom-part">
+              <h3 class="resume-con-title">Sr. Font End Developer</h3>
+              <h5 class="resume-sub-title">Apple Inc / 2020 - Current</h5>
+              <p class="resume-con-disc">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="resume-colom-part">
+              <h3 class="resume-con-title">Sr. Font End Developer</h3>
+              <h5 class="resume-sub-title">Apple Inc / 2020 - Current</h5>
+              <p class="resume-con-disc">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="resume-colom-part">
+              <h3 class="resume-con-title">Sr. Font End Developer</h3>
+              <h5 class="resume-sub-title">Apple Inc / 2020 - Current</h5>
+              <p class="resume-con-disc">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--resume part end-->
   </main>
   <footer></footer>
 </body>
