--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
               <p class="resume-con-disc">List skill/technologies here. You can change the icon above 
                 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
-            <hr>
           </div>
         </div>
+       <div class="resume-btn">
+        <button class="btn-primary">Download CV</button>
+       </div>
       </div>
     </section>
     <!--resume part end-->
