added footer section with form

--- a/index.html
+++ b/index.html
@@ -142,6 +142,27 @@
     </section>
     <!--resume part end-->
   </main>
-  <footer></footer>
+  <!--footer part start-->
+  <footer>
+    <div class="footer-colom">
+      <h3 class="footer-title">Lets Connect</h3>
+      <p class="footer-descreption">Please fill out the form on this section to contact with me or call between <br> 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+      <div class="footer-icon">
+        <a href="#"><img src="./images/icons/facebook.png" alt=""></a>
+        <a href="#"><img src="./images/icons/twitter.png" alt=""></a>
+        <a href="#"><img src="./images/icons/insta.png" alt=""></a>
+      </div>
+      </div>
+    <div class="footer-colom">
+      <h3 class="footer-title">Let’s Message me</h3>
+      <form class="contact">
+        <input type="text" placeholder="Your Message">
+        <input type="email" placeholder="Your Email">
+        <textarea name="Message" placeholder="Message" id="" cols="30" rows="10"></textarea>
+        <input class="btn-primary" type="submit" value="submit">
+      </form>
+    </div>
+  </footer>
+  <!--footer part end-->
 </body>
 </html>
